# AMP

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  ValgrindSuppresionFile  cppcheckSuppressionFile
cmake/: UseDoxygen.cmake  (+4 more)
src/IO/: AsciiWriter.cpp  AsciiWriter.h  CMakeLists.txt  HDF.cpp  HDF.h  HDF.hpp  HDF5.types.cpp  HDF5_Class.cpp  HDF5_Class.h  HDF5writer.cpp  HDF5writer.h  NullWriter.cpp  NullWriter.h  RestartManager.h  SiloWriter.cpp  SiloWriter.h  Writer.cpp  Writer.h  Xdmf.cpp  Xdmf.h
src/IO/SAMRAI/: RestartManager.cpp
src/IO/test/: CMakeLists.txt  testCSRMatrixRestart.cpp  test_HDF5.cpp  test_Writer.cpp  test_XDMF.cpp  view_HDF5.cpp
src/matrices/: AMPCSRMatrixParameters.h  AMPCSRMatrixParameters.hpp  CMakeLists.txt  CSRConfig.h  CSRConfigHypre.h  CSRConstruct.h  CSRMatrix.cpp  CSRMatrix.h  CSRMatrix.hpp  CSRVisit.h  DenseSerialMatrix.cpp  DenseSerialMatrix.h  GetRowHelper.cpp  GetRowHelper.h  GetRowHelper.hpp  Matrix.cpp  Matrix.h  MatrixBuilder.cpp  MatrixBuilder.h  MatrixFactory.cpp  MatrixFactory.h  MatrixParameters.cpp  MatrixParameters.h  MatrixParametersBase.cpp  MatrixParametersBase.h  MatrixParametersFactory.cpp  MatrixParametersFactory.h  RawCSRMatrixParameters.cpp  RawCSRMatrixParameters.h  RawCSRMatrixParameters.hpp
src/matrices/data/: CSRLocalMatrixData.cpp  CSRLocalMatrixData.h  CSRLocalMatrixData.hpp  CSRMatrixCommunicator.h  CSRMatrixCommunicator.hpp  CSRMatrixData.cpp  CSRMatrixData.h  CSRMatrixData.hpp  CSRMatrixDataHelpers.cpp  CSRMatrixDataHelpers.h  CSRMatrixDataHelpers.hpp  DenseSerialMatrixData.cpp  DenseSerialMatrixData.h  MatrixData.cpp  MatrixData.h  MatrixData.hpp  MatrixDataFactory.cpp  MatrixDataFactory.h
src/matrices/operations/: DenseSerialMatrixOperations.cpp  DenseSerialMatrixOperations.h  MatrixOperations.cpp  MatrixOperations.h  MatrixOperationsFactory.cpp  MatrixOperationsFactory.h
src/matrices/petsc/: NativePetscMatrix.cpp  NativePetscMatrix.h  NativePetscMatrixData.cpp  NativePetscMatrixData.h  NativePetscMatrixOperations.cpp  NativePetscMatrixOperations.h  PetscMatrixHelpers.cpp
src/matrices/test/: CMakeLists.txt  testCompareCSRMatOps.cpp  testMatCopyCast.cpp  testMatCreate.cpp  testMatMigrate.cpp  testMatMultCoarsen.cpp  testMatMultPerf.cpp  testMatOpDev.cpp  testMatRedistribute.cpp  testMatTranspose.cpp  testMatVec.cpp  testMatVecPerf.cpp  test_Matrix.cpp
src/matrices/testHelpers/: MatrixTests.cpp  MatrixTests.h  test_MatrixVectorFactory.h
src/matrices/trilinos/: EpetraMatrixData.cpp  EpetraMatrixData.h  EpetraMatrixOperations.cpp  EpetraMatrixOperations.h  ManagedEpetraMatrix.cpp  ManagedEpetraMatrix.h
src/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshElement.cpp  MeshElement.h  MeshElementVector.cpp  MeshElementVector.h  MeshElementVectorIterator.cpp  MeshElementVectorIterator.hpp  MeshFactory.cpp  MeshGenerator.cpp  MeshID.cpp  MeshID.h  MeshIterator.cpp  MeshIterator.h  MeshIterator.inline.h  MeshListIterator.cpp  MeshListIterator.h  MeshListIterator.hpp  MeshUtilities.cpp  MeshUtilities.h  MultiIterator.cpp  MultiIterator.h  MultiMesh.cpp  MultiMesh.h  StructuredMeshHelper.cpp  SubsetMesh.cpp  SubsetMesh.h
src/mesh/SAMRAI/: BogusTagAndInitStrategy.cpp  BogusTagAndInitStrategy.h  SAMRAIHierarchyAdaptor.cpp  SAMRAIHierarchyAdaptor.h  SAMRAILevelAdaptor.cpp  SAMRAILevelAdaptor.h  SAMRAILoadBalanceFactory.cpp  SAMRAILoadBalanceFactory.h  SAMRAIPatchAdaptor.cpp  SAMRAIPatchAdaptor.h  SAMRBuilder.cpp  SAMRBuilder.h  SAMRHierarchy.h  SAMRLevel.h  SAMRPatch.h  SimpleLoadBalancer.cpp  SimpleLoadBalancer.h
src/mesh/examples/: CMakeLists.txt  createAMRHierarchy.cpp  createMesh.cpp
src/mesh/libmesh/: initializeLibMesh.cpp  initializeLibMesh.h  libmeshElemIterator.cpp  libmeshElemIterator.h  libmeshMesh.cpp  libmeshMesh.h  libmeshMeshElement.cpp  libmeshMeshElement.h  libmeshNodeIterator.cpp  libmeshNodeIterator.h
src/mesh/loadBalance/: loadBalanceSimulator.cpp  loadBalanceSimulator.h
src/mesh/structured/: BoxMesh.cpp  BoxMesh.h  BoxMesh.inline.h  BoxMeshIndex.cpp  MeshElementIndexIterator.cpp  MovableBoxMesh.cpp  MovableBoxMesh.h  PureLogicalMesh.cpp  PureLogicalMesh.h  StructuredGeometryMesh.cpp  StructuredGeometryMesh.h  structuredMeshElement.cpp  structuredMeshElement.h  structuredMeshIterator.cpp  structuredMeshIterator.h
src/mesh/test/: CMakeLists.txt  testHex8ElementLinearInterpolation.h  testHex8ElementMapping.h  testHex8ElementNormalToFaces.h  testMeshPerformance.cpp  testMultiMeshOwnerRank.cpp  test_LoadBalance.cpp  test_Mesh.cpp  view_STL.cpp
src/mesh/testHelpers/: boxMeshTests.cpp  latex_visualization_tools.cpp  latex_visualization_tools.h  libmeshGenerators.cpp  meshMatrixTests.cpp  meshMatrixTests.inline.h  meshTestLoop.cpp  meshTests.cpp  meshTests.h  meshWriters.cpp  meshWriters.h
src/mesh/triangle/: TriangleHelpers.cpp  TriangleHelpers.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshElement.cpp  TriangleMeshElement.h  TriangleMeshIterator.cpp  TriangleMeshIterator.h
src/operators/: CMakeLists.txt  ColumnOperator.cpp  ColumnOperator.h  ConstraintsEliminationOperator.cpp  ContactResidualCorrection.cpp  ContactResidualCorrection.h  CustomConstraintsEliminationOperator.cpp  ElementPhysicsModelFactory.cpp  FunctionOperator.h  IdentityOperator.cpp  IdentityOperator.h  LinearBVPOperator.cpp  LinearOperator.cpp  LinearOperator.h  MemorySpaceMigrationLinearOperator.cpp  MemorySpaceMigrationLinearOperator.h  MemorySpaceMigrationOperator.cpp  MemorySpaceMigrationOperator.h  MoveMeshOperator.cpp  MoveMeshOperator.h  NeutronicsRhs.cpp  NeutronicsRhsExtras.cpp  NonlinearBVPOperator.cpp  Operator.cpp  Operator.h  OperatorBuilder.cpp  OperatorFactory.cpp  RowOperator.cpp  WeldOperator.h
src/operators/boundary/: DirichletMatrixCorrection.cpp  DirichletMatrixCorrection.h  DirichletVectorCorrection.cpp  DirichletVectorCorrection.h  MassMatrixCorrection.cpp
src/operators/diffusion/: DiffusionElement.cpp  DiffusionElement.h  DiffusionLinearFEOperator.cpp  DiffusionNonlinearFEOperator.cpp  DiffusionNonlinearFEOperator.h
src/operators/diffusionFD/: DiffusionFD.cpp  DiffusionFD.h  (+3 more)
(+1114 files in other folders)
