BEGIN_PACKAGE_CONFIG( IO )
IF ( USE_SAMRAI )
    ADD_PACKAGE_SUBDIRECTORY( SAMRAI )
    IF ( USE_CUDA )
        FILE( GLOB SAMRAI_FILES SAMRAI/*.cpp )
        SET_SOURCE_FILES_PROPERTIES( ${SAMRAI_FILES} PROPERTIES LANGUAGE CUDA )
    ENDIF()
ENDIF()
INSTALL_AMP_TARGET( IO )

ADD_SUBDIRECTORY( test )
