BEGIN_PACKAGE_CONFIG( mesh )
ADD_PACKAGE_SUBDIRECTORY( loadBalance )
ADD_PACKAGE_SUBDIRECTORY( structured )
ADD_PACKAGE_SUBDIRECTORY( triangle )
ADD_PACKAGE_SUBDIRECTORY( testHelpers )
IF ( USE_SAMRAI )
    ADD_PACKAGE_SUBDIRECTORY( SAMRAI )
    IF ( USE_CUDA )
        FILE( GLOB SAMRAI_FILES SAMRAI/*.cpp )
        SET_SOURCE_FILES_PROPERTIES( ${SAMRAI_FILES} PROPERTIES LANGUAGE CUDA )
    ENDIF()
ENDIF()

IF ( USE_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( libmesh )
ENDIF()
INSTALL_AMP_TARGET( mesh )

# Add the unit tests
ADD_SUBDIRECTORY( test )

# Add the examples
ADD_SUBDIRECTORY( examples )


