BEGIN_PACKAGE_CONFIG( operators )
ADD_PACKAGE_SUBDIRECTORY( boundary )
ADD_PACKAGE_SUBDIRECTORY( diffusionFD )
ADD_PACKAGE_SUBDIRECTORY( map )
ADD_PACKAGE_SUBDIRECTORY( newFrozenVectorDesign )
ADD_PACKAGE_SUBDIRECTORY( radiationDiffusionFD )
ADD_PACKAGE_SUBDIRECTORY( testHelpers )
IF ( USE_PETSC )
    ADD_PACKAGE_SUBDIRECTORY( petsc )
ENDIF()
IF ( USE_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( libmesh )
    ADD_PACKAGE_SUBDIRECTORY( map/libmesh )
    ADD_PACKAGE_SUBDIRECTORY( boundary/libmesh )
    ADD_PACKAGE_SUBDIRECTORY( mechanics )
    ADD_PACKAGE_SUBDIRECTORY( diffusion )
    ADD_PACKAGE_SUBDIRECTORY( flow )
    ADD_PACKAGE_SUBDIRECTORY( subchannel )
ENDIF()
IF ( USE_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( trilinos )
    IF ( USE_TRILINOS_EPETRA )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/epetra )
    ENDIF()
    IF ( USE_TRILINOS_ML )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/ml )
    ENDIF()
ENDIF()
IF ( USE_MOAB AND USE_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( moab )
ENDIF()
INSTALL_AMP_TARGET( operators )

ADD_SUBDIRECTORY( test )
