# Copy solver parameter files
COPY_TEST_FILE( CGParameters )
COPY_TEST_FILE( GMRESParameters )
COPY_TEST_FILE( FGMRESParameters )
COPY_TEST_FILE( BiCGSTABParameters )
COPY_TEST_FILE( TFQMRParameters )
COPY_TEST_FILE( QMRCGSTABParameters )
COPY_TEST_FILE( GMRESRParameters )
COPY_TEST_FILE( PetscFGMRESParameters )
COPY_TEST_FILE( PetscCGParameters )
COPY_TEST_FILE( PetscBiCGSTABParameters )
COPY_TEST_FILE( SASolver-Level-MIS2 )
COPY_TEST_FILE( SASolver-Level-simple )
COPY_TEST_FILE( PC-SASolver-JL1-Parameters )
COPY_TEST_FILE( PC-SASolver-HGS-Parameters )
COPY_TEST_FILE( PC-BoomerAMGParameters )
COPY_TEST_FILE( PC-UASolverParameters )
COPY_TEST_FILE( PC-MLParameters )
COPY_TEST_FILE( PC-MueLuParameters )
COPY_TEST_FILE( PC-DiagParameters )

# Copy test inputs
COPY_TEST_FILE( input_DiffusionFDOperator-1D )
COPY_TEST_FILE( input_DiffusionFDOperator-2D )
COPY_TEST_FILE( input_DiffusionFDOperator-3D )
COPY_TEST_FILE( input_LinearElasticityOperator-1 )
COPY_TEST_FILE( input_LinearFickOperator-bar )
COPY_TEST_FILE( input_LinearThermalOperator-bar )
COPY_TEST_FILE( input_LinearThermalRobinOperator )
COPY_TEST_FILE( input_LinearThermalRobinOperator-CylMesh )

COPY_TEST_FILE( input_NonlinearFick-cylinder-1a )
COPY_TEST_FILE( input_NonlinearFick-cylinder-1b )
COPY_TEST_FILE( input_NonlinearFick-cylinder-1c )
COPY_TEST_FILE( input_NonlinearFick-cylinder-1d )
COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFick-cylinder-TUI-1 )
COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFick-cylinder-TUI-2 )
COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFickSoret-cylinder-TUI-1 )
COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFickSoret-cylinder-TUI-2 )
COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFickSoret-cylinder-TUI-3 )
COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFickSoret-cylinder-OxMSRZC09-1 )

COPY_TEST_FILE( input_PetscSNESSolver )
COPY_TEST_FILE( input_TrilinosNOXSolver )

COPY_TEST_FILE( input_testAMGuniform )
COPY_TEST_FILE( input_testLinearRobinBoundaryOperator-1 )
COPY_TEST_FILE( input_testLinearRobinBoundaryOperator-2 )
COPY_TEST_FILE( input_testNonlinearKrylovAccelerator-NonlinearThermal-cylinder_kIsOne )
COPY_TEST_FILE( input_NKA-BoomerAMG-NonlinearThermal-cylinder_MATPRO )
COPY_TEST_FILE( input_NKA-TrilinosML-NonlinearThermal-cylinder_MATPRO )
COPY_TEST_FILE( input_PetscSNESSolver-NonlinearThermal-cylinder_MATPRO petsc/data )
COPY_TEST_FILE( input_PetscSNESSolver-NonlinearThermal-cylinder_MATPRO2 petsc/data )
COPY_TEST_FILE( input_PetscSNESSolver-BoomerAMG-NonlinearThermal-cylinder_MATPRO2 )
COPY_TEST_FILE( input_PetscSNESSolver-BoomerAMG-NonlinearThermal-cylinder_MATPRO )
COPY_TEST_FILE( input_PetscSNESSolver-TrilinosML-NonlinearThermal-cylinder_MATPRO )
COPY_TEST_FILE( input_TrilinosNOX-TrilinosML-NonlinearThermal-cylinder_MATPRO )

COPY_TEST_FILE( input_testPetscSNESSolver-JFNK-ML-NonlinearMechanics-1-normal mechanics/data )
COPY_TEST_FILE( input_testPetscSNESSolver-JFNK-BoomerAMG-NonlinearMechanics-1-normal mechanics/data )

COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFick-cylinder-1a )
COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFick-cylinder-1b )
COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFick-cylinder-1c )
COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearFick-cylinder-1d )

COPY_TEST_FILE( input_NKASolver-ML-NonlinearMechanics-1-normal mechanics/data )
COPY_TEST_FILE( input_NKASolver-BoomerAMG-NonlinearMechanics-1-normal mechanics/data )

COPY_TEST_FILE( input_testColumnSolver-LinearThermalAndFick-1 )
COPY_TEST_FILE( inputNonlinearKrylovAccelerator1 )
COPY_TEST_FILE( inputNonlinearKrylovAccelerator2 )
COPY_TEST_FILE( inputNonlinearKrylovAccelerator3 )
COPY_TEST_FILE( input_testMatrixFreeML-1 )
COPY_TEST_FILE( input_testMeshRefinementDiffusion-1 )
COPY_TEST_FILE( input_testNewFrozenVectorDesign )
COPY_TEST_FILE( input_testSolversForUserMatrix-ML )
COPY_TEST_FILE( input_testBoomerAMGSolver-LinearThermalOperator-3 )
COPY_TEST_FILE( input_testBoomerAMGSolver-LinearThermalOperator-bar )
COPY_TEST_FILE( input_LinearThermalOperator-2-cylinder )
COPY_TEST_FILE( input_LinearThermalOperator-2-shell )
COPY_TEST_FILE( input_LinearThermalOperator-2_HALDEN )
COPY_TEST_FILE( input_LinearThermalOperator-2_HALDEN_clad )
COPY_TEST_FILE( input_testBoomerAMGSolver-LinearFickOperator-bar )
COPY_TEST_FILE( input_testBoomerAMGSolver-LinearElasticityOperator-1 )
COPY_TEST_FILE( input_testSolversForUserMatrix-BoomerAMG )

COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-CG )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-FCG )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-IPCG )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-CylMesh-CG )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-GMRES )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-GMRESWithCGS )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-GMRESWithCGS2 )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-GMRESWithRestart )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-FGMRES )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BiCGSTAB )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-TFQMR )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-QMRCGSTAB )

COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-2D-JacobiL1 )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-JacobiL1 )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-2D-HybridGS )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-HybridGS )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-2D-SASolver-JacobiL1 )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-SASolver-JacobiL1 )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-2D-SASolver-JacobiL1-FCG )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-SASolver-JacobiL1-FCG )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-2D-SASolver-HybridGS )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-SASolver-HybridGS )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-2D-SASolver-HybridGS-FCG )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-SASolver-HybridGS-FCG )
COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-DiagonalSolver-CG )

COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-SASolver-JacobiL1 )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-SASolver-JacobiL1-FCG )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-SASolver-HybridGS )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-SASolver-HybridGS-FCG )

COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-CG )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-IPCG )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-FCG )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-CG-FCG )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-GMRES )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-FGMRES )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-GMRESR-GCR )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-GMRESR-GMRES )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-GMRESR-BiCGSTAB )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-GMRESR-TFQMR )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-GMRESR-QMRCGSTAB )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-BiCGSTAB )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-TFQMR )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-QMRCGSTAB )
COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-LeftPC-DiagonalSolver-GMRES )

IF ( USE_TRILINOS )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-CG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-IPCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-FCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-GMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-FGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-BiCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-TFQMR )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-PetscCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-PetscFGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-ML-PetscBiCGSTAB )
    
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-CG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-IPCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-FCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-GMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-FGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-BiCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-TFQMR )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-PetscCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-PetscFGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-MueLu-PetscBiCGSTAB )

    COPY_TEST_FILE( input_testTrilinosMLSolver-LinearElasticityOperator-1 )

    COPY_TEST_FILE( input_testTrilinosMueLuSolver-LinearThermalOperator-2 )
    COPY_TEST_FILE( input_testTrilinosMueLuSolver-LinearThermalOperator-3 )
    COPY_TEST_FILE( input_testTrilinosMueLuSolver-LinearThermalOperator-bar )
    COPY_TEST_FILE( input_testTrilinosMueLuSolver-LinearThermalOperator-2_HALDEN_clad )
    COPY_TEST_FILE( input_testTrilinosMueLuSolver-LinearFickOperator-bar )
    COPY_TEST_FILE( input_testTrilinosMueLuSolver-LinearElasticityOperator-1 )
    COPY_TEST_FILE( input_testSolversForUserMatrix-MueLu )
ENDIF()

IF ( USE_HYPRE )
    COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-2D-BoomerAMG )
    COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-BoomerAMG )
    COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-2D-BoomerAMG-CG )
    COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-BoomerAMG-CG )
    COPY_TEST_FILE( input_testLinearSolvers-DiffusionFD-3D-DiagonalPC-HypreCG )

    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-CG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-IPCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-FCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-CG-FCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-CylMesh-BoomerAMG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-CylMesh-BoomerAMG-CG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-GMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-FGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-GMRESR-GCR )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-GMRESR-GMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-GMRESR-BiCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-GMRESR-TFQMR )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-GMRESR-QMRCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-BiCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-TFQMR )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-QMRCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-HypreCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalPC-HypreCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-HypreCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-HypreGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalPC-HypreGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-HypreGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-HypreBiCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalPC-HypreBiCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-HypreBiCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-SASolver-BoomerAMG )

    COPY_TEST_FILE( input_testLinearSolvers-PL-AmpMesh-BoomerAMG )
    COPY_TEST_FILE( input_testLinearSolvers-PL-CylMesh-BoomerAMG )

    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-UASolver-FCG )

    IF ( USE_PETSC )
        COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-PetscCG )
        COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-PetscFGMRES )
        COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-BoomerAMG-PetscBiCGSTAB )
    ENDIF()
ENDIF()

IF ( USE_PETSC )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-PetscCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-PetscFGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-PetscBiCGSTAB )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-PetscCG )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-PetscFGMRES )
    COPY_TEST_FILE( input_testLinearSolvers-LinearThermalRobin-DiagonalSolver-PetscBiCGSTAB )
ENDIF()

COPY_TEST_FILE( input_testLinearSolvers-PL-AmpMesh-CG )
COPY_TEST_FILE( input_testLinearSolvers-PL-CylMesh-CG )

COPY_TEST_FILE( input_testPetscSNESSolver-NonlinearThermalOxygenDiffusion-2 )


# Set the inputs for testNonlinearSolvers-NonlinearThermal-1 soe we can run them in parallel
SET( InputsNonlinearThermal )
IF ( USE_PETSC )
    LIST( APPEND InputsNonlinearThermal "input_PetscSNESSolver-NonlinearThermal-cylinder_MATPRO" )
    LIST( APPEND InputsNonlinearThermal "input_PetscSNESSolver-NonlinearThermal-cylinder_MATPRO2" )
    IF ( USE_HYPRE )
        LIST( APPEND InputsNonlinearThermal "input_PetscSNESSolver-BoomerAMG-NonlinearThermal-cylinder_MATPRO" )
        LIST( APPEND InputsNonlinearThermal "input_PetscSNESSolver-BoomerAMG-NonlinearThermal-cylinder_MATPRO2" )
    ENDIF()
    IF ( USE_TRILINOS_ML )
        LIST( APPEND InputsNonlinearThermal "input_PetscSNESSolver-TrilinosML-NonlinearThermal-cylinder_MATPRO" )
    ENDIF()
ENDIF()
IF ( USE_HYPRE )
    LIST( APPEND InputsNonlinearThermal "input_NKA-BoomerAMG-NonlinearThermal-cylinder_MATPRO" )
ENDIF()
IF ( USE_TRILINOS_ML )
    LIST( APPEND InputsNonlinearThermal "input_NKA-TrilinosML-NonlinearThermal-cylinder_MATPRO" )
    IF ( USE_TRILINOS_NOX )
        LIST( APPEND InputsNonlinearThermal "input_TrilinosNOX-TrilinosML-NonlinearThermal-cylinder_MATPRO" )
    ENDIF()
ENDIF()


# Add the tests
INITIALIZE_TESTBUILDER()
ADD_AMP_TEST( testSolversWithRhsOptions )
ADD_AMP_TEST_1_2_4( testLinearSolvers-DiffusionFD GPU )
ADD_AMP_TEST_1_2_4( testLinearSolvers-PseudoLaplacian GPU )
IF ( USE_LIBMESH )
    # ADD_AMP_TEST_1_2_4( testSolversForVectorAdaptor )
    ADD_AMP_TEST_1_2_4( testLinearSolvers-LinearThermalRobin GPU )
    ADD_AMP_TEST_1_2_4( testSolversForUserMatrix )
    ADD_AMP_TEST_1_2_4( testLinearSolvers-LinearThermalOperator-2 GPU )
    ADD_AMP_TEST_1_2_4( testLinearSolvers-LinearElasticityOperator-1 )
    ADD_AMP_TEST_1_2_4( testLinearSolvers-LinearFickOperator-bar  )
    ADD_AMP_TEST_1_2_4( testLinearSolvers-LinearThermalOperator-bar )
    ADD_AMP_TEST_1_2_4( testNonlinearSolvers-NonlinearMechanics-1  )
    ADD_AMP_TEST_1_2_4( testNonlinearSolvers-NonlinearFick )
    ADD_AMP_TEST_1_2_4( testLinearSolversWithIdentity GPU )
    ADD_AMP_PROVISIONAL_TEST( testSolveNonlinearThermalOxygenDiffusion )
    FOREACH( input ${InputsNonlinearThermal} )
        ADD_AMP_TEST_1_2_4( testSolveNonlinearThermal ${input} NO_RESOURCES )
    ENDFOREACH()
    IF ( USE_TRILINOS )
        ADD_AMP_TEST( testAMGuniform )
        IF ( USE_TRILINOS_ML )
            ADD_AMP_TEST( testMatrixFreeML )
        ENDIF()
        ADD_AMP_TEST_1_2_4( testLinearRobinBoundaryOperator-1 )
    ENDIF()
    IF ( USE_PETSC AND USE_TRILINOS )
        ADD_AMP_PROVISIONAL_TEST( testMeshRefinementDiffusion-1 )
        ADD_AMP_TEST_1_2_4( testColumnSolver-LinearThermalAndFick-1 )
    ENDIF()
ENDIF()
IF ( USE_TRILINOS OR USE_PETSC )
    ADD_AMP_TEST( testNonlinearSolversWithIdentity )
ENDIF()
IF ( USE_LIBMESH AND USE_PETSC AND USE_HYPRE )
    ADD_TB_TEST_1_2_4( testNonlinearSolvers_NonlinearFickSoret_1 )
    ADD_TB_TEST_1_2_4( testNonlinearSolvers_NonlinearFickSoret_2 )
ENDIF()
ADD_AMP_TEST( testNewFrozenVectorDesign )
FINALIZE_TESTBUILDER()


# Add subdirectories
ADD_SUBDIRECTORY( flow )
ADD_SUBDIRECTORY( mechanics )
ADD_SUBDIRECTORY( subchannel )

